# otama

./: .gitignore  COPYING  Makefile.am  Makefile.in  README.md  aclocal.m4  configure  configure.ac
docs/ja/: c_api.md  drivers.md  installation-freebsd.md  installation-mingw32.md  installation-msvc.md  installation-ubuntu.md  ruby_api.md  tips.md  wishlist.md
examples/: Makefile.am  Makefile.in
examples/example-webapp/: Gemfile  Makefile.am  Makefile.in  README.md  add-images.rb  config.ru  config.yaml  example-webapp.rb  example-webapp.yaml  import.sh  make-database.rb  template.html.erb
examples/example-webapp/views/: template.erb
examples/rpc/: Gemfile  Makefile.am  Makefile.in  README.md  config.ru  config.yaml  otama_client.rb  otama_server.rb  test.rb
examples/ukbench/: Gemfile  Makefile.am  Makefile.in  README.md  config.yaml  filelist.txt  import.sh  make-database.rb  ukbench.rb  ukbench_vlad.cpp
image/: Makefile.am  Makefile.in
m4/: ax_arg_enable.m4
ruby/: bovw2k.yaml  bovw512k.yaml  bovw512k_iv.yaml  bovw512k_nodb.yaml  bovw8k.yaml  extconf.rb  otama.c  test.rb  test.sh  test_kvs.rb  test_similarity.rb  vlad_nodb.yaml
src/: Makefile.am  Makefile.in  config.h.in  libotama-0.def  otama.pc.in
src/lib/: otama.cpp  otama.h  otama_config.h  otama_config_auto.h.in  otama_config_msvc.h  otama_dbi.cpp  otama_dbi.h  otama_dbi_internal.h  otama_dbi_mysql.c  otama_dbi_pgsql.c  otama_dbi_sqlite3.c  otama_feature_raw.h  otama_id.c  otama_id.h  otama_image.c  otama_image.h  otama_image_internal.h  otama_internal.h  otama_kvs.c  otama_kvs.cpp  otama_kvs.h  otama_log.c  otama_log.h  otama_mmap.c  otama_mmap.h  otama_portable.h  otama_result.c  otama_result.h  otama_status.c  otama_status.h  otama_util.c  otama_util.h  otama_variant.cpp  otama_variant.h  otama_yaml.c  otama_yaml.h
src/lib/posix/: otama_mmap.c
src/lib/windows/: otama_mmap.c
src/models/: otama_bovw_fixed_driver.hpp  otama_bovw_inverted_index_driver.hpp  otama_bovw_nodb_driver.hpp  otama_bovw_sparse_nodb_driver.hpp  otama_bovw_vsplit3_inverted_index_driver.hpp  otama_dbi_driver.hpp  otama_driver.hpp  otama_driver_factory.cpp  otama_driver_factory.hpp  otama_driver_interface.hpp  otama_fixed_driver.hpp  otama_fixed_strage.hpp  otama_inverted_index.hpp  otama_inverted_index_bucket.cpp  otama_inverted_index_bucket.hpp  otama_inverted_index_driver.hpp  otama_inverted_index_kc.cpp  otama_inverted_index_kc.hpp  otama_inverted_index_kvs.hpp  otama_inverted_index_leveldb.cpp  otama_inverted_index_leveldb.hpp  otama_inverted_index_map.cpp  otama_inverted_index_map.hpp  otama_kyotocabinet.hpp  otama_leveldb.hpp  otama_lmca_fixed_driver.hpp  otama_lmca_nodb_driver.hpp  otama_nodb_driver.hpp  otama_omp_lock.hpp  otama_sboc_fixed_driver.hpp  otama_sboc_nodb_driver.hpp  otama_variable_byte_code_vector.hpp  otama_vlad_nodb_driver.hpp
src/nvbovw/: Makefile.am  Makefile.in  nv_bovw.hpp  nv_bovw_benchmark.cpp  nv_bovw_internal.h  nv_bovw_train.cpp
src/nvcolorex/: Makefile.am  Makefile.in  nv_color_boc.cpp  nv_color_boc.h  nv_color_boc_static.c  nv_color_hist.c  nv_color_hist.h  nv_color_major.c  nv_color_major.h  nv_color_vlad.c  nv_color_vlad.h
src/nvlmcaex/: Makefile.am  Makefile.in  nv_lmca.hpp  nv_lmca_train.cpp
src/nvvlad/: Makefile.am  Makefile.in  nv_vlad.cpp  nv_vlad.h  nv_vlad.hpp  nv_vlad128_static.c  nv_vlad160_static.c  nv_vlad256_static.c  nv_vlad512_static.c  nv_vlad64_static.c  nv_vlad_static.c
src/tests/: Makefile.am  Makefile.in  otama_test.cpp  otama_test.h  otama_test_api.c  otama_test_bovw.cpp  otama_test_cluster.c  otama_test_dbi.c  otama_test_kvs.c  otama_test_similarity_api.c  otama_test_variant.c  otama_test_vlad.cpp
src/tests/config/: bovw2k.yaml  bovw2k_boc.yaml  bovw2k_nodb.yaml  bovw2k_sboc.yaml  bovw2k_sboc_nodb.yaml  bovw512k_iv.yaml  bovw512k_iv_kc.yaml  bovw512k_iv_kc_node1.yaml  bovw512k_iv_kc_node2.yaml  bovw512k_iv_ldb.yaml  bovw512k_iv_ldb_node1.yaml  bovw512k_iv_ldb_node2.yaml  bovw512k_sboc.yaml  bovw512k_vsplit3_iv_ldb.yaml  bovw8k.yaml  bovw8k_nodb.yaml  bovw8k_node1.yaml  bovw8k_node2.yaml  color.yaml  color_nodb.yaml  id.yaml  id_nodb.yaml  lmca_hsv.yaml  lmca_hsv_nodb.yaml  lmca_vlad.yaml  lmca_vlad_colorcode.yaml  lmca_vlad_colorcode_nodb.yaml  lmca_vlad_hsv.yaml  lmca_vlad_hsv_nodb.yaml  lmca_vlad_nodb.yaml  lmca_vladhsv.yaml  lmca_vladhsv_nodb.yaml  sboc.yaml  sboc_nodb.yaml  sim.yaml  sim_nodb.yaml  vlad128_nodb.yaml  vlad_nodb.yaml
src/util/: otama_create_database.c  otama_create_table.c  otama_drop_database.c  otama_drop_index.c  otama_drop_table.c  otama_import.cpp  otama_lmca_train  otama_pull.c  otama_search.c  otama_vacuum_index.c
vcproj/: Makefile.am  Makefile.in  otama.sln  otama.vcproj  otama.vcxproj  otama.vcxproj.filters  otama_create_database.vcproj  otama_create_database.vcxproj  otama_create_database.vcxproj.filters  otama_create_table.vcproj  otama_drop_database.vcproj  otama_drop_database.vcxproj  otama_drop_database.vcxproj.filters  otama_drop_index.vcproj  otama_drop_index.vcxproj  otama_drop_index.vcxproj.filters  otama_drop_table.vcproj  otama_import.vcproj  otama_import.vcxproj  otama_import.vcxproj.filters  otama_pull.vcproj  otama_pull.vcxproj  otama_pull.vcxproj.filters  otama_search.vcproj  otama_search.vcxproj  otama_search.vcxproj.filters  otama_test.vcproj  otama_test.vcxproj  otama_test.vcxproj.filters  otama_vacuum_index.vcproj  otama_vacuum_index.vcxproj  otama_vacuum_index.vcxproj.filters
