EXTRA_DIST = otama.sln \
otama.vcxproj otama_vacuum_index.vcxproj otama_create_database.vcxproj \
otama_drop_database.vcxproj otama_drop_index.vcxproj otama_import.vcxproj \
otama_pull.vcxproj otama_test.vcxproj otama.vcxproj.filters \
otama_vacuum_index.vcxproj.filters otama_create_database.vcxproj.filters \
otama_drop_database.vcxproj.filters otama_drop_index.vcxproj.filters \
otama_import.vcxproj.filters otama_pull.vcxproj.filters \
otama_test.vcxproj.filters


