EXTRA_DIST = 
noinst_LTLIBRARIES = libnvcolorex.la

libnvcolorex_la_LIBADD = 
libnvcolorex_la_CFLAGS = -I$(srcdir)
libnvcolorex_la_CXXFLAGS = $(libnvcolorex_la_CFLAGS)
libnvcolorex_la_CPPFLAGS = $(libnvcolorex_la_CFLAGS)
libnvcolorex_la_LDFLAGS = -no-undefined 

libnvcolorex_la_SOURCES = \
nv_color_boc_static.c \
nv_color_boc.h \
nv_color_boc.cpp \
nv_color_major.h \
nv_color_major.c 
