noinst_LTLIBRARIES = libnvvlad.la

libnvvlad_la_LIBADD = 
libnvvlad_la_CFLAGS = -I$(srcdir) -I$(srcdir)/../nvcolorex
libnvvlad_la_CXXFLAGS = $(libnvvlad_la_CFLAGS)
libnvvlad_la_CPPFLAGS = $(libnvvlad_la_CFLAGS)
libnvvlad_la_LDFLAGS = -no-undefined 

libnvvlad_la_SOURCES = \
nv_vlad.h \
nv_vlad.cpp \
nv_vlad_static.c
