noinst_LTLIBRARIES = libnvvlad.la

libnvvlad_la_LIBADD = 
libnvvlad_la_CFLAGS = -I$(srcdir) -I$(srcdir)/../nvcolorex
libnvvlad_la_CXXFLAGS = $(libnvvlad_la_CFLAGS)
libnvvlad_la_CPPFLAGS = $(libnvvlad_la_CFLAGS)
libnvvlad_la_LDFLAGS = -no-undefined 

libnvvlad_la_SOURCES = \
nv_vlad.hpp \
nv_vlad512_static.c \
nv_vlad256_static.c \
nv_vlad160_static.c \
nv_vlad128_static.c 
